unpackaged/objects/OppStageGuidance__mdt.object
<CustomObject>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>3D Imaging</fullName>
          <default>true</default>
          <label>3D Imaging</label>
        </value>
        <value>
          <fullName>ATLANTIS</fullName>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Solutions</fullName>
        </value>
        <value>
          <fullName>Endentulous</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Extra Oral Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
        </value>
        <value>
          <fullName>Intra Oral Imaging</fullName>
        </value>
        <value>
          <fullName>Midwest Equipment</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Regenerative</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CountrySelect__c</fullName>
    <description>Field used for adding multiple countries to one custom metadata record</description>
    <inlineHelpText>I this field, you are able to add multiple country values to be associated with this record. Please add each country as a two-digit value and separate each country with a ';' - e.g. 'SE;NO;DK'</inlineHelpText>
    <label>Country Selection</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AD</fullName>
          <default>true</default>
          <label>AD</label>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AF</fullName>
        </value>
        <value>
          <fullName>AG</fullName>
        </value>
        <value>
          <fullName>AI</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AN</fullName>
        </value>
        <value>
          <fullName>AO</fullName>
        </value>
        <value>
          <fullName>AQ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AS</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>AW</fullName>
        </value>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>BA</fullName>
        </value>
        <value>
          <fullName>BB</fullName>
        </value>
        <value>
          <fullName>BD</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BF</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BH</fullName>
        </value>
        <value>
          <fullName>BI</fullName>
        </value>
        <value>
          <fullName>BJ</fullName>
        </value>
        <value>
          <fullName>BL</fullName>
        </value>
        <value>
          <fullName>BM</fullName>
        </value>
        <value>
          <fullName>BN</fullName>
        </value>
        <value>
          <fullName>BO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>FieldsToDisplay__c</fullName>
    <label>FieldsToDisplay</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Opportunity_Stage_Guidances</relationshipLabel>
    <relationshipName>Opportunity_Stage_Guidances</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
  </fields>
  <fields>
    <fullName>OppStage__c</fullName>
    <label>Opportunity stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>0. Prospect</fullName>
          <default>true</default>
          <label>0. Prospect</label>
        </value>
        <value>
          <fullName>1. Needs analysis</fullName>
        </value>
        <value>
          <fullName>2. Positioning products</fullName>
        </value>
        <value>
          <fullName>3. Proposal</fullName>
        </value>
        <value>
          <fullName>4. Negotiation</fullName>
        </value>
        <value>
          <fullName>Closed Won</fullName>
        </value>
        <value>
          <fullName>Closed Lost</fullName>
        </value>
        <value>
          <fullName>New</fullName>
        </value>
        <value>
          <fullName>In progress</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
        <value>
          <fullName>Parked/OnHold</fullName>
          <label>Parked/On Hold</label>
        </value>
        <value>
          <fullName>Registered</fullName>
        </value>
        <value>
          <fullName>Positioning Products</fullName>
        </value>
        <value>
          <fullName>Expired</fullName>
        </value>
        <value>
          <fullName>Parked</fullName>
          <isActive>false</isActive>
          <label>Parked</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>StageGuidanceDescr__c</fullName>
    <label>Stage Guidance Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>StageGuidance__c</fullName>
    <label>Stage guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <label>Opportunity Stage Guidance</label>
  <listViews>
    <fullName>All2</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Object__c</columns>
    <columns>Category__c</columns>
    <columns>Country__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>CountrySelect__c</columns>
    <columns>RecordTypeDeveloperName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All2Opp</fullName>
    <columns>MasterLabel</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Object__c</field>
      <operation>equals</operation>
      <value>Opportunity</value>
    </filters>
    <label>All Items Opp</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All_Items_Sales_Lead</fullName>
    <columns>MasterLabel</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <columns>Country__c</columns>
    <columns>Object__c</columns>
    <columns>Category__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Object__c</field>
      <operation>notEqual</operation>
      <value>Opportunity</value>
    </filters>
    <label>All Items Sales Lead</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>CIS</fullName>
    <columns>Object__c</columns>
    <columns>Category__c</columns>
    <columns>MasterLabel</columns>
    <columns>OppStage__c</columns>
    <columns>DeveloperName</columns>
    <columns>CountrySelect__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Country__c</field>
      <operation>contains</operation>
      <value>RU</value>
    </filters>
    <label>CIS</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>DE</fullName>
    <columns>MasterLabel</columns>
    <columns>Country__c</columns>
    <columns>Object__c</columns>
    <columns>Category__c</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>CountrySelect__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Country__c</field>
      <operation>equals</operation>
      <value>DE</value>
    </filters>
    <label>DE</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>FR</fullName>
    <columns>MasterLabel</columns>
    <columns>Country__c</columns>
    <columns>Object__c</columns>
    <columns>Category__c</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>CountrySelect__c</columns>
    <columns>RecordTypeDeveloperName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Country__c</field>
      <operation>equals</operation>
      <value>FR</value>
    </filters>
    <label>FR</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>US</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Category__c</columns>
    <columns>OppStage__c</columns>
    <columns>StageGuidance__c</columns>
    <columns>StageGuidanceDescr__c</columns>
    <columns>Object__c</columns>
    <columns>FieldsToDisplay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Country__c</field>
      <operation>equals</operation>
      <value>US</value>
    </filters>
    <label>US</label>
    <language>en_US</language>
  </listViews>
  <pluralLabel>Opportunity Stage Guidances</pluralLabel>
</CustomObject>